[metadata]
name = tensorflow-low-rank
version = 0.0.1
author = Yuhan Liu
author_email = yliu1021@outlook.com
description = Implementation of low rank layers in TensorFlow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yliu1021/tensorflow-low-rank
project_urls =
    Bug Tracker = https://github.com/yliu1021/tensorflow-low-rank/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
